[package]
name = "fastcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.9.0"
walkdir = "2"
home = "0.5.4"
